# standing-relations

./: Cargo.toml  README.md  TODO
.cargo/: config.toml
src/: concat.rs  context.rs  context_sends.rs  count_map.rs  dirty.rs  dynamic.rs  feedback.rs  flat_iter.rs  input.rs  is_context.rs  lib.rs  op.rs  output.rs  pipes.rs  rc_collection.rs  relation.rs  split.rs  tests.rs
src/context/: global_id.rs  handler_queue.rs  input.rs  mod.rs
src/convenience/: concat.rs  consolidate.rs  dynamic.rs  feedback.rs  input.rs  join.rs  map.rs  mod.rs  output.rs  pair.rs  reduce.rs  save.rs  split.rs
src/core/: count_map.rs  dirty.rs  flat_iter.rs  mborrowed.rs  mod.rs  output.rs  pipes.rs  relation.rs
src/core/context/: handler_queue.rs  input.rs  mod.rs  tracking.rs
src/core/dirty/: rc_collection.rs
src/core/op/: concat.rs  consolidate.rs  dynamic.rs  join.rs  map.rs  mod.rs  reduce.rs  save.rs  split.rs  triangles.rs
src/feedback/: context.rs  mod.rs  op.rs  pipe.rs
src/feedback/context/: input_change_tracker.rs  pq_receiver.rs  tracker.rs
src/feedback/op/: checked_foreach.rs  pipe.rs
src/op/: concat.rs  consolidate.rs  dynamic.rs  input.rs  join.rs  map.rs  mod.rs  reduce.rs  save.rs  split.rs
src/op/join/: flat_iter.rs
src/split/: with_clones.rs
src/tests/: dijkstra.rs  fingers.rs  game.rs  mod.rs  player_outcome.rs  readme.rs
src/tests/solve/: mod.rs  non_loopy.rs  relational.rs
src/tests/ttt/: mod.rs  outcome.rs  parse.rs  win.rs
src/tracked/: context.rs  mod.rs  tracker.rs
tests/goldenfiles/: fingers.txt  fingers_stats.dot  ttt_stats.dot
(+4 files in other folders)
