[package]
authors = ["David Spies <dnspies@gmail.com>"]
description = "Standing relations over a shifting dataset optimized for 'feedback loop' scenarios"
edition = "2018"
license = "MIT"
name = "standing-relations"
readme = "README.md"
repository = "https://github.com/davidspies/standing-relations/"
version = "0.1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"

[dev-dependencies]
goldenfile = "1.4"
